finish-java-updates